@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 4,
+  "count": 12,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-08-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 2,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2023-08-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
