@@ -1,3 +1,12 @@
+2023-08-31T00:44:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6031628051 # 1868
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-31
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1113 2794 / 1121 2805
+* notice: next accum: outdated-unq outdated-all / unq all: 1114 2796 / 1122 2808
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2023-08-16] / [2023-08-30]
+
 2023-08-30T08:12:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6022289550 # 1866
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
